===================================
gnome-commander 1.2.8.3
---------------

Bug fixes:
 * Fixed problem #596768 (build warnings for python)
 * Fixed problem #596973 (documentation build error)


===================================
gnome-commander 1.2.8.2
---------------

Bug fixes:
 * Fixed problem #591944 (permissions set to 000 after chmod)
 * Fixed problem #595097 (build error for poppler >= 0.11.3)
 * Fixed debian problem #438884 (wrong device label when switching panels with CTRL+U)
 * Fixed problem with broken file icon after renaming a symbolic link


===================================
gnome-commander 1.2.8.1
---------------

Bug fixes:
 * Fixed problem #587325 (crash in a clean chroot environment)
 * Fixed problem #589108 (build error on openSUSE)
 * Fixed problem #591206 (crash while sysconf() on FreeBSD)
 * Fixed problem with $c(16) counter formatting in advanced file rename templates


===================================
gnome-commander 1.2.8
---------------

Bug fixes:
 * Fixed problem #375357 (crash when cancelling calculation of dir properties)
 * Fixed problem #536446 (file name not focused for in-place renaming)
 * Fixed problem #539812 (crash when deleting files: broken it.po)
 * Fixed problem #548947 (non-UTF8 locale date problem)
 * Fixed problem #548948 (crash when home directory contains non-UTF8 characters)
 * Fixed problem #548961 (support for input method when rename or quicksearch)
 * Fixed problem #554586 (AC_PROG_CXX macro problem)
 * Fixed problem #554598 (GNOME Goal: LINGUAS)
 * Fixed problem #556664 (bookmarks can not be saved for mounted devices)
 * Fixed problem #556836 (pane scrolling when moving between panes)
 * Fixed problem #567404 (crash when INSERT pressed over subdir)
 * Fixed problem #567506 (slow startup for systems with many users)
 * Fixed problem #570727 (usage of deprecated gnome_url_show)
 * Fixed problem #571239 (replacing obsoleted GnomeColorPicker with GtkColorButton)